ipa/client: Combine operations on the IPA server
The reason for this is to avoid having to do the same or similar things
over and over again for each host in the play, especially since these
operations are delegated to the IPA server, i.e. had to run sequentially
host after host in order to avoid race conditions.

To achieve this, the IPA client related group variables are prepared in
suitable structures in `prepare-ipa-info.yml` and consumed by
`common.yml`, `hbac.yml` and `sudo.yml`, which do most operations in one
go per e.g. host group on the affected IPA server(s).

Additionally:
- Remove compat for legacy `fas_client_groups`, only check for its
  presence and warn.
- Remove the prepared but masked out task to manage password-less sudo
  access.
- Make yamllint a little happier on the changed files.

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/common.yml
+++ b/roles/ipa/client/tasks/common.yml
@@ -1,22 +1,38 @@
+---
+## This will only run once per play (as per `main.yml`), so needs to consider all affected hosts.
+
 ## Cluster-wide rules
 
-- name: Check that sysadmin-main group exists
-  command: "getent group sysadmin-main"
-  changed_when: False
+# This is supposed to fail if a configured group doesn't exist. In this case, either add the group
+# manually or remove the reference from configuration.
+
+- name: Check that sysadmin-main and referenced groups exist on IPA server(s)
+  delegate_to: "{{ item[0] }}"
+  command: "getent group {{ item[1] }}"
+  changed_when: false
+  loop: >-
+    {{
+      ipa_server_user_groups
+      + (ipa_server_all_groups_hosts_dict | list | product(['sysadmin-main']) | list)
+    }}
 
 ## Rules specific to hosts, host groups
 
-- name: Ensure IPA host group exists
+- name: Ensure IPA host groups exist on IPA server(s)
+  delegate_to: "{{ item[0] }}"
   ipahostgroup:
-    name: "{{ ipa_host_group }}"
-    description: "{{ ipa_host_group_desc | default(omit) }}"
-    ipaadmin_password: "{{ ipa_admin_password }}"
+    name: "{{ item[1] }}"
+    description: "{{ ipa_server_host_groups_dict[item[1]].desc | default(omit) }}"
+    ipaadmin_password: "{{ ipa_server_admin_passwords[item[0]] }}"
     state: present
+  loop: "{{ ipa_server_host_groups }}"
 
-- name: Ensure host is in IPA host group
+- name: Ensure hosts are in IPA host groups
+  delegate_to: "{{ item[0] }}"
   ipahostgroup:
-    name: "{{ ipa_host_group }}"
-    ipaadmin_password: "{{ ipa_admin_password }}"
+    name: "{{ item[1] }}"
+    ipaadmin_password: "{{ ipa_server_admin_passwords[item[0]] }}"
     action: member
     state: present
-    host: "{{ inventory_hostname }}"
+    host: "{{ item[2] | list }}"
+  loop: "{{ ipa_server_host_groups_hosts }}"
