--- a/roles/ipa/client/tasks/main.yml
+++ b/roles/ipa/client/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 - name: Install IPA client packages
   package:
     name:
@@ -29,15 +30,23 @@
     - ipa/client
     - fas-client-cleanup
 
-- name: Basic configuration for client on IPA cluster
-  delegate_to: "{{ ipa_server }}"
+- name: Prepare IPA-related information to make the following more efficient
+  delegate_to: localhost
+  import_tasks: prepare-ipa-info.yml
+  tags:
+    - ipa/client
+    - config
+  run_once: yes
+
+- name: Basic configuration for clients on IPA cluster
+  delegate_to: localhost
   import_tasks: common.yml
   # don't muck with prod for now
   when: env == 'staging'
   tags:
     - ipa/client
     - config
-  throttle: 1
+  run_once: yes
 
 - name: Configure HBAC on IPA cluster
   delegate_to: "{{ ipa_server }}"
@@ -47,7 +56,7 @@
   tags:
     - ipa/client
     - config
-  throttle: 1
+  run_once: yes
 
 - name: Configure sudo on IPA cluster
   delegate_to: "{{ ipa_server }}"
@@ -57,4 +66,4 @@
   tags:
     - ipa/client
     - config
-  throttle: 1
+  run_once: yes
