Branching f34 from rawhide
Signed-off-by: Tomas Hrcka <thrcka@redhat.com>

--- a/roles/bodhi2/backend/templates/koji_sync_listener.toml
+++ b/roles/bodhi2/backend/templates/koji_sync_listener.toml
@@ -36,6 +36,10 @@ arguments = {}
 # XXX If you modify this taglist.  Please also modify the other copy in
 # bodhi2/backend/tasks/main.yml
 taglist = [
+    "f35",
+    "f35-container",
+    "f35-modular",
+    "f35-flatpak",
     "f34",
     "f34-container",
     "f34-modular",
