--- a/roles/openshift-apps/greenwave/templates/fedora.yaml
+++ b/roles/openshift-apps/greenwave/templates/fedora.yaml
@@ -66,6 +66,7 @@ rules: []
 id: "kojibuild_bodhipush_remoterule"
 product_versions:
   - fedora-rawhide
+  - fedora-35
   - fedora-34
   - fedora-33
   - fedora-32
