copr: define git_gc_depth for copr-dist-git

--- a/roles/copr/dist_git/files/dist-git.conf
+++ b/roles/copr/dist_git/files/dist-git.conf
@@ -4,4 +4,7 @@ git_author_email = <copr-devel@lists.fedoraproject.org>
 
 cache_dir   = /var/lib/dist-git/cache
 gitroot_dir = /var/lib/dist-git/git
+#this is difference from standard config!
+git_gc_depth   = 3
+
 gitolite    = False
