--- a/roles/base/tasks/crypto-policies.yml
+++ b/roles/base/tasks/crypto-policies.yml
@@ -3,6 +3,7 @@
   register: currentcryptopolicy
   failed_when: "1 != 1"
   changed_when: "1 != 1"
+  check_mode: no
   tags:
   - crypto-policies
   - base/crypto-policies
@@ -12,6 +13,7 @@
   register: cryptopolicyapplied
   failed_when: "1 != 1"
   changed_when: "1 != 1"
+  check_mode: no
   tags:
   - crypto-policies
   - base/crypto-policies
@@ -19,6 +21,7 @@
 - name: Set crypto-policy on fedora 33 and higher hosts to allow 2fa to work
   command: "update-crypto-policies --set DEFAULT:FEDORA32"
   when: "ansible_distribution_major_version|int >= 33 and (currentcryptopolicy.stdout.find('DEFAULT:FEDORA32') == -1 or cryptopolicyapplied.rc != 0)"
+  check_mode: no
   tags:
   - crypto-policies
   - base/crypto-policies
