koji_hub / koji_builders: enable save_failed_tree
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/koji_builder/templates/kojid.conf
+++ b/roles/koji_builder/templates/kojid.conf
@@ -147,6 +147,8 @@ keytab = /etc/kojid/kojid.keytab
 {{ plugins.append("runroot") }}
 {% endif %}
 
+{{ plugins.append("save_failed_tree") }}
+
 {% if ansible_architecture == 'x86_64' and not inventory_hostname.startswith('bkernel') %}
 {{ plugins.append("builder_containerbuild") }}
 {% endif %}
