--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -782,3 +782,13 @@
     keephost: true
     tags: packager-dashboard
 
+  - role: httpd/reverseproxy
+    website: "languages{{ env_suffix }}.fedoraproject.org"
+    destname: os
+    balancer_name: os
+    targettype: openshift
+    balancer_members: "{{ openshift_masters }}"
+    keephost: true
+    when: env == "staging"
+    tags:
+    - languages
