--- a/playbooks/include/proxies-websites.yml
+++ b/playbooks/include/proxies-websites.yml
@@ -926,6 +926,14 @@
     when: env == "production"
 
   - role: httpd/website
+    site_name: languages.fedoraproject.org
+    server_aliases: [languages.stg.fedoraproject.org]
+    sslonly: true
+    cert_name: "{{wildcard_cert_name}}"
+    when: env == "staging"
+    tags: languages
+
+  - role: httpd/website
     site_name: fpdc.fedoraproject.org
     sslonly: true
     server_aliases: [fpdc.stg.fedoraproject.org]
