Don't get a keytab on IPA itself
Signed-off-by: Aurélien Bompard <aurelien@bompard.org>

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -546,6 +546,7 @@
 
 - name: Setup host keytab
   import_tasks: keytab.yml
+  when: not inventory_hostname.startswith('ipa')
 
 # SSSD-KCM has been showing way too many bugs with it saying "I have a ticket" while the ticket
 # is actually expired, and kinit's still not refreshing them and such alike.
