distgit/pagure: add a hotfix tag where we fix the /var/log/pagure folder
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/distgit/pagure/tasks/main.yml
+++ b/roles/distgit/pagure/tasks/main.yml
@@ -82,6 +82,7 @@
                owner=pagure group=packager mode=u+rwx,g+rwxs,o+rx
   tags:
   - pagure
+  - hotfix
 
 - name: create the /srv/tmp folder where to clone repos
   file: state=directory
