nagios_client: install the pagure systemd checks on all pagure instances
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/nagios_client/tasks/main.yml
+++ b/roles/nagios_client/tasks/main.yml
@@ -309,11 +309,12 @@
     src={{ item }}.j2 dest=/etc/nrpe.d/{{ item }} owner=root group=root mode=0644
   with_items:
     - check_systemd_units.cfg
-  when: inventory_hostname.startswith('pagure02')    
+  when: inventory_hostname.startswith('pagure')
   notify:
     - restart nrpe
   tags:
-    - nagios_client    
+    - nagios_client
+    - pagure
 
 - name: Check if the fedmsg group exists
   shell: /usr/bin/getent group fedmsg | /usr/bin/wc -l | tr -d ' '
