add ipa/client role to the rest of the playbookd for staging

--- a/playbooks/groups/basset.yml
+++ b/playbooks/groups/basset.yml
@@ -17,7 +17,8 @@
   - rkhunter
   - nagios_client
   - hosts
-  - fas_client
+  - { role: ipa/client, when: env == "staging" }
+  - { role: fas_client, when: env != "staging" }
   - collectd/base
   - rsyncd
   - sudo
