--- a/playbooks/groups/dns.yml
+++ b/playbooks/groups/dns.yml
@@ -17,7 +17,8 @@
   - hosts
   - rkhunter
   - nagios_client
-  - fas_client
+  - { role: ipa/client, when: env == "staging" }
+  - { role: fas_client, when: env != "staging" }
   - collectd/base
   - collectd/bind
   - rsyncd
