--- a/playbooks/groups/fedimg.yml
+++ b/playbooks/groups/fedimg.yml
@@ -16,7 +16,8 @@
   roles:
   - base
   - rkhunter
-  - fas_client
+  - { role: ipa/client, when: env == "staging" }
+  - { role: fas_client, when: env != "staging" }
   - nagios_client
   - hosts
   - collectd/base
