--- a/playbooks/groups/retrace.yml
+++ b/playbooks/groups/retrace.yml
@@ -64,7 +64,8 @@
   tasks:
     - import_role: name=base
     - import_role: name=hosts
-    - import_role: name=fas_client
+    - { import_role: name=ipa/client, when: env == "staging" }
+    - { import_role: name=fas_client, when: env != "staging" }
     - import_role: name=rkhunter
     - import_role: name=nagios_client
     - import_role: name=openvpn/client
