--- a/playbooks/groups/sign-bridge.yml
+++ b/playbooks/groups/sign-bridge.yml
@@ -22,6 +22,7 @@
   - base
   - rkhunter
   - hosts
+  - { role: ipa/client, when: env == "staging" }
   - { role: fas_client, when: env != "staging" }
   - sudo
   - nagios_client
