--- a/playbooks/groups/backup-server.yml
+++ b/playbooks/groups/backup-server.yml
@@ -18,7 +18,8 @@
   - rkhunter
   - nagios_client
   - hosts
-  - fas_client
+  - { role: ipa/client, when: env == "staging" }
+  - { role: hosts, when: env != "staging" }
   - sudo
   - collectd/base
   - { role: nfs/client,
