--- a/playbooks/groups/bastion_stg.yml
+++ b/playbooks/groups/bastion_stg.yml
@@ -15,7 +15,8 @@
   - rkhunter
   - nagios_client
   - hosts
-  - fas_client
+  - { role: ipa/client, when: env == "staging" }
+  - { role: fas_client, when: env != "staging" }
   - sudo
   #- collectd/base
   #- { role: openvpn/server, when: not inventory_hostname.startswith('bastion-comm01') or inventory_hostname.startswith('bastion13') }
