--- a/playbooks/groups/noc.yml
+++ b/playbooks/groups/noc.yml
@@ -19,7 +19,8 @@
   - rkhunter
   - nagios_client
   - hosts
-  - fas_client
+  - { role: ipa/client, when: env == "staging" }
+  - { role: fas_client, when: env != "staging" }
   - collectd/base
   - { role: rsyncd, when: datacenter == 'iad2' }
   - sudo
