--- a/playbooks/groups/notifs-backend.yml
+++ b/playbooks/groups/notifs-backend.yml
@@ -22,7 +22,8 @@
   - base
   - rkhunter
   - hosts
-  - fas_client
+  - { role: ipa/client, when: env == "staging" }
+  - { role: fas_client, when: env != "staging" }
   - nagios_client
   - collectd/base
   - { role: fedmsg/base,
