--- a/playbooks/groups/nuancier.yml
+++ b/playbooks/groups/nuancier.yml
@@ -20,7 +20,8 @@
   - rkhunter
   - nagios_client
   - hosts
-  - fas_client
+  - { role: ipa/client, when: env == "staging" }
+  - { role: fas_client, when: env != "staging" }
   - collectd/base
   - sudo
   - { role: openvpn/client,
