--- a/playbooks/groups/pdc.yml
+++ b/playbooks/groups/pdc.yml
@@ -23,6 +23,7 @@
   - collectd/base
   - hosts
   - { role: fas_client, when: env != "staging" }
+  - { role: ipa/client, when: env == "staging" }
   - sudo
 
   tasks:
