--- a/playbooks/groups/people.yml
+++ b/playbooks/groups/people.yml
@@ -59,7 +59,8 @@
   roles:
   - base
   - collectd/base
-  - fas_client
+  - { role: ipa/client, when: env == "staging" }
+  - { role: fas_client, when: env != "staging" }
   - hosts
   - nagios_client
   - rkhunter
