--- a/playbooks/groups/pkgs.yml
+++ b/playbooks/groups/pkgs.yml
@@ -16,6 +16,7 @@
   - rkhunter
   - nagios_client
   - { role: fas_client, when: env != "staging" }
+  - { role: ipa/client, when: env == "staging" }
   - collectd/base
   - sudo
   - apache
