--- a/playbooks/groups/postgresql-server.yml
+++ b/playbooks/groups/postgresql-server.yml
@@ -24,6 +24,7 @@
   - base
   - rkhunter
   - { role: fas_client, when: env != "staging" }
+  - { role: ipa/client, when: env == "staging" }
   - nagios_client
   - hosts
   - postgresql_server
