--- a/playbooks/groups/releng-compose.yml
+++ b/playbooks/groups/releng-compose.yml
@@ -24,6 +24,7 @@
   - base
   - hosts
   - { role: fas_client, when: env != "staging" }
+  - { role: ipa/client, when: env == "staging" }
   - rkhunter
   - nagios_client
   - collectd/base
