--- a/playbooks/groups/sundries.yml
+++ b/playbooks/groups/sundries.yml
@@ -20,6 +20,7 @@
   - rkhunter
   - nagios_client
   - hosts
+  - { role: ipa/client, when: env == "staging" }
   - { role: fas_client, when: env != "staging" }
   - collectd/base
   - mod_wsgi
