--- a/playbooks/groups/virthost.yml
+++ b/playbooks/groups/virthost.yml
@@ -23,7 +23,8 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: fas_client, when: env != 'staging' }
+  - { role: ipa/client, when: env == "staging" }
+  - { role: fas_client, when: env != "staging" }
   - collectd/base
   - { role: iscsi_client, when: "inventory_hostname.startswith(('bvirthost', 'buildvmhost-0'))" }
   - { role: iscsi_client, when: "inventory_hostname.startswith(('bvmhost-x86-06', 'bvmhost-x86-07')) and datacenter == 'iad2'" }
