--- a/playbooks/groups/wiki.yml
+++ b/playbooks/groups/wiki.yml
@@ -23,6 +23,7 @@
   - rkhunter
   - nagios_client
   - hosts
+  - { role: ipa/client, when: env == "staging" }
   - { role: fas_client, when: env != "staging" }
   - collectd/base
   - apache
