--- a/playbooks/manual/noggin-deployment/uninstall_ipa_client.yml
+++ b/playbooks/manual/noggin-deployment/uninstall_ipa_client.yml
@@ -1,5 +1,5 @@
 - name: Uninstall IPA client
-  hosts: bodhi_backend_stg:bugzilla2fedmsg_stg:github2fedmsg_stg:ipsilon_stg:mbs_stg:osbs_control_stg:osbs_masters_stg:osbs_nodes_stg:osbs_aarch64_masters_stg:osbs_aarch64_nodes_stg
+  hosts: bodhi_backend_stg:bugzilla2fedmsg_stg:github2fedmsg_stg:ipsilon_stg:mbs_stg:osbs_control_stg:osbs_masters_stg:osbs_nodes_stg:osbs_aarch64_masters_stg:osbs_aarch64_nodes_stg:buildvm_stg:buildvm_ppc64le_stg:buildvm_aarch64_stg:buildvm_armv7_stg:buildvm_s390x_stg
   user: root
   vars_files:
   - /srv/web/infra/ansible/vars/global.yml
@@ -17,6 +17,7 @@
 - import_playbook: "/srv/web/infra/ansible/playbooks/groups/ipsilon.yml"
 - import_playbook: "/srv/web/infra/ansible/playbooks/groups/mbs.yml"
 - import_playbook: "/srv/web/infra/ansible/playbooks/groups/osbs/deploy-cluster.yml"
+- import_playbook: "/srv/web/infra/ansible/playbooks/groups/buildvm.yml"
 
 
 - name: Remove keytab in OpenShift
@@ -70,7 +71,10 @@
     loop: "{{keytabs}}"
 
   - name: Remove keytab secret
-    command: oc -n {{item.app}} secrets unlink {{item.secret_name}} {{item.key}}
+    command: oc -n {{item.app}} delete secret {{item.secret_name}}
+    register: delete_out
+    failed_when: "delete_out.rc != 0 and 'NotFound' not in delete_out.stderr"
+    changed_when: "delete_out.rc == 0 and 'secret \"{{item.secret_name}}\" deleted' in delete_out.stdout"
     loop: "{{keytabs}}"
 
 - import_playbook: "/srv/web/infra/ansible/playbooks/openshift-apps/elections.yml"
