--- a/playbooks/manual/noggin-deployment/uninstall_ipa_client.yml
+++ b/playbooks/manual/noggin-deployment/uninstall_ipa_client.yml
@@ -87,3 +87,7 @@
 - import_playbook: "/srv/web/infra/ansible/playbooks/openshift-apps/monitor_gating.yml"
 - import_playbook: "/srv/web/infra/ansible/playbooks/openshift-apps/sso.yml"
 - import_playbook: "/srv/web/infra/ansible/playbooks/openshift-apps/the-new-hotness.yml"
+
+# No keytab, but the CA cert needs to be updated
+- import_playbook: "/srv/web/infra/ansible/playbooks/openshift-apps/noggin.yml"
+- import_playbook: "/srv/web/infra/ansible/playbooks/openshift-apps/noggin-centos.yml"
