--- a/main.yml
+++ b/main.yml
@@ -60,7 +60,9 @@
 - import_playbook: /srv/web/infra/ansible/playbooks/groups/odcs.yml
 - import_playbook: /srv/web/infra/ansible/playbooks/groups/openqa-workers.yml
 - import_playbook: /srv/web/infra/ansible/playbooks/groups/openqa.yml
-- import_playbook: /srv/web/infra/ansible/playbooks/groups/osbs-cluster.yml
+  #- import_playbook: /srv/web/infra/ansible/playbooks/groups/osbs-cluster.yml
+- import_playbook: /srv/web/infra/ansible/playbooks/groups/osbs/deploy-cluster.yml
+- import_playbook: /srv/web/infra/ansible/playbooks/groups/osbs/configure-osbs.yml
 - import_playbook: /srv/web/infra/ansible/playbooks/groups/os-cluster.yml
 #- import_playbook: /srv/web/infra/ansible/playbooks/groups/os-proxies.yml
 - import_playbook: /srv/web/infra/ansible/playbooks/groups/packages.yml
