--- a/roles/ipa/client/tasks/prepare-ipa-info.yml
+++ b/roles/ipa/client/tasks/prepare-ipa-info.yml
@@ -29,7 +29,7 @@
 #     }, ...
 #   }
 #
-# ipa_server_passwords: ->
+# ipa_server_admin_passwords ->
 #   {
 #     "ipa_server_1": "ipa_password_1",
 #     "ipa_server_2": "ipa_password_2",
