--- a/roles/openshift-apps/the-new-hotness/templates/config.toml
+++ b/roles/openshift-apps/the-new-hotness/templates/config.toml
@@ -51,7 +51,7 @@ version = 1
 disable_existing_loggers = true
 
 [log_config.formatters.simple]
-format = "[%(name)s %(levelname)s] %(message)s"
+format = "[%(asctime)s %(name)s %(levelname)s] %(message)s"
 
 [log_config.handlers.console]
 class = "logging.StreamHandler"
