ipa/client: Deal with hosts without IPA settings
Don't attempt to loop over undefined variables. This can happen if the
relevant `ipa_*` variables aren't defined for any host in the play.

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/common.yml
+++ b/roles/ipa/client/tasks/common.yml
@@ -26,6 +26,7 @@
     ipaadmin_password: "{{ ipa_server_admin_passwords[item[0]] }}"
     state: present
   loop: "{{ ipa_server_host_groups }}"
+  when: ipa_server_host_groups is defined
 
 - name: Ensure hosts are in IPA host groups
   delegate_to: "{{ item[0] }}"
@@ -36,3 +37,4 @@
     state: present
     host: "{{ item[4] | list }}"
   loop: "{{ ipa_server_host_user_groups_hosts }}"
+  when: ipa_server_host_user_groups_hosts is defined
