--- a/roles/ipa/client/tasks/sudo.yml
+++ b/roles/ipa/client/tasks/sudo.yml
@@ -31,4 +31,4 @@
     runasusercategory: "all"
     runasgroupcategory: "all"
   loop: "{{ ipa_server_host_groups }}"
-  when: ipa_server_host_groups is defined
+  when: ipa_server_host_groups is defined and ipa_server_host_groups_dict[item[0]][item[1]]['sudo_groups'] is defined
